syntax="proto3";

package account.v1;
option go_package="github.com/daidai53/webook/account/v1;accountv1";

service AccountService{
  rpc Credit(CreditRequest) returns(CreditResponse);
}

message CreditRequest{
  string biz = 1;
  int64 biz_id = 2;
  repeated CreditItem items = 3;
}

message CreditItem{
  int64 account=1;
  AccountType account_type =2;
  int64 amt=3;
  string currency=4;
  int64 uid =5;
}

message CreditResponse{

}

enum AccountType{
  AccountTypeUnknown = 0;
  AccountTypeReward =1;
  AccountTypePlatform =2;
}